--- a/index.html
+++ b/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1> <span class="name">Rayan Ahmed</span> World!!!</h1>
+            <h3>Looking for a Web Developer???</h3>
+            <p>I completed my under-graduation degree in CSE from UIU. Finally I'm planning to be a web developer and
+                thus
+                I'm learning it. I'm Developing myself into this field with Programming Hero. By finishing the course
+                with
+                having some completed outlook of my quality to develop websites. Now i'm hoping to have a better version
+                of
+                me after these scheme.</p>
+            <a class="hire-button" target="_blank" href="https://www.facebook.com/ra.kib.94801116">Hire Me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/rakib1.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
