--- a/index.html
+++ b/index.html
@@ -17,18 +17,36 @@
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1> <span class="name">Rayan Ahmed</span> World!!!</h1>
-            <h3>Looking for a Web Developer???</h3>
-            <p>I completed my under-graduation degree in CSE from UIU. Finally I'm planning to be a web developer and
+            <h2>Looking for a Web Developer???</h2>
+            <p>I completed my under-graduation degree in CSE from UIU. Finally I'm planning to be a web developer
+                and
                 thus
-                I'm learning it. I'm Developing myself into this field with Programming Hero. By finishing the course
+                I'm learning it. I'm Developing myself into this field with Programming Hero. By finishing the
+                course
                 with
-                having some completed outlook of my quality to develop websites. Now i'm hoping to have a better version
+                having some completed outlook of my quality to develop websites. Now i'm hoping to have a better
+                version
                 of
                 me after these scheme.</p>
-            <a class="hire-button" target="_blank" href="https://www.facebook.com/ra.kib.94801116">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/ra.kib.94801116">Hire Me</a>
         </div>
         <div class="half-width">
             <img src="images/rakib1.png" alt="">
+        </div>
+    </section>
+    <section class="mid-banner">
+        <div class="half-width">
+            <img src="images/rakib2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a Top Web Developer</h2>
+            <p>I already learned the basic HTML, CSS and I can connect with GitHub. I can build any simple website. I
+                can even teach my fellows how to make simple website. My goal is to build 3 websites and learn advanced
+                topics.</p>
+            <a class="link-button" target="_blank"
+                href="https://drive.google.com/file/d/16qH1jbpqEo6FCjY0GjZ1lTFB8bQkvQkK/view?usp=sharing">Download
+                Resume</a>
         </div>
     </section>
 </body>
