--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="top-banner flex-container">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1> <span class="name">Rayan Ahmed</span> World!!!</h1>
+            <h1> <span class="orange">Rayan Ahmed</span> World!!!</h1>
             <h2>Looking for a Web Developer???</h2>
             <p>I completed my under-graduation degree in CSE from UIU. Finally I'm planning to be a web developer
                 and
@@ -52,23 +52,26 @@
     <section class="experience">
         <h1>Experiences</h1>
         <div class="flex-container">
-            <div class="half-width">
-                <h1>Full Stack Web Developer</h1>
-                <h3>2021-Present | Pro Level Developer</h3>
+            <div id="web-exp" class="exp-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="half-width">
-                <h1>Programming Knowledge</h1>
-                <h3>2020-2021 | Programming Hero Learner</h3>
+            <div id="prog-exp" class="exp-item">
+                <h2>Programming Knowledge</h2>
+                <h3 class="orange">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed
                     it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 
 </html>
